# pagination

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: composite.rs  lib.rs  page.rs  simple.rs
